# yamllint-demo

./: .gitignore  pyproject.toml  requirements.txt
parse/: docstring.py  docstring_parser.py  pytaf_parser.py  pytaf_parser_2.py
tests/: test_docstring.py  test_docstring_parser.py  test_indents.py  test_indents_2.py  test_lark.py  test_lark_2.py  test_lark_3.py  test_lark_4.py  test_linter.py  test_parser.py  test_pytaf_parser.py  test_pytaf_parser_2.py  test_tokenizer.py  test_yamllint.py  yaml_script.yaml  yamllint_custom_config.yaml
